--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Dicee</title>
+    <title>Dice Challenge</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="images/dice 6.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Pacifico&display=swap" rel="stylesheet">
